@@ -1,3 +1,7 @@
+2010-08-13  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Fixed an issue where 0 was not accepted for the minimumMatch TypoScript parameter
+
 2010-08-04  Markus Godlbach  <markus.goldbach@dkd.de>
 
 	* Added a hook and interface to modify facets before rendering them
